--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "formidable": "^1.1.1",
     "fs": "0.0.1-security",
+    "iconv-lite": "^0.4.19",
     "querystring": "^0.2.0",
     "uuid": "^3.2.1"
   }
